--- a/tensorflow-core/tensorflow-core-native/pom.xml
+++ b/tensorflow-core/tensorflow-core-native/pom.xml
@@ -641,7 +641,7 @@
 
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.6.0</version>
+        <version>3.7.0</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -649,6 +649,12 @@
               <goal>jar</goal>
             </goals>
             <configuration>
+              <additionalJOptions>
+                <additionalJOption>-Xmaxerrs</additionalJOption>
+                <additionalJOption>65536</additionalJOption>
+                <additionalJOption>-Xmaxwarns</additionalJOption>
+                <additionalJOption>65536</additionalJOption>
+              </additionalJOptions>
               <failOnError>false</failOnError>
               <minmemory>256m</minmemory>
               <maxmemory>2048m</maxmemory>
