--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <scm>
     <url>https://github.com/tensorflow/java.git</url>
-    <connection>git@github.com:tensorflow/java.git</connection>
+    <connection>scm:git@github.com:tensorflow/java.git</connection>
     <developerConnection>scm:git:https://github.com/tensorflow/java.git</developerConnection>
   </scm>
 
